fix: eliminating duplication and add AbstractNumberPrinter and AbstractWarehouse